--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 			name="description"
 			content="Trojans is a national level technical symposium organised by the IT department of Chennai Institute of Technology. Trojans were first launched on the day of 13th March, 2022. Trojans aim to make the process of gaining technical knowledge into a more interactive and fun activity by organising various events in their symposium."
 		/>
+		<meta name="keywords" content="trojans, cit, trojans cit, symposium, chennai institute of technology">
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<title>TROJANS</title>
